Feature/pgs integration (#22)
* feature(registration-email-verification): hardening


* feature(pgs-integration): wip


* feature(pgs-integration): pr 14


* feature(pgs-integration): pr 14


* feature(pgs-integration): pr 14


* feature(pgs-integration): pr14 (fix pr14)


* feature(pgs-integration): pr14 (fix pr14)


* feature(pgs-integration): pr14 (fix pr14)


* feature(pgs-integration): pr14 (improvement)


* feature(pgs-integration): pr14 (improvement)


* feature(pgs-integration): pr14 (fix ci)


---------
